--- a/nn.CSS
+++ b/nn.CSS
@@ -1,5 +1,9 @@
 h1,{
-    margin-left: auto;
-    margin-right: auto;
-   
+div.container6 {
+  height: 10em;
+  display: flex;
+  align-items: center;
+  justify-content: center }
+div.container6 p {
+  margin: 0 }
 }
